# stream-triggering

./: .Doxyfile  .clang-format  .gitignore  CMakeLists.txt  README.md  fast  warnings.txt
cmake/: CXIBuild.sh  FindLibFabric.cmake  Tioga.md  stream-triggering-config.cmake.in
docs/html/: CXIQueue_8cpp.html  CXIQueue_8cpp__incl.map  CXIQueue_8cpp__incl.md5  CXIQueue_8cpp_a271ddf81140f43e0b57def42a30e9040_cgraph.map  CXIQueue_8cpp_a271ddf81140f43e0b57def42a30e9040_cgraph.md5  CXIQueue_8hpp.html  CXIQueue_8hpp__dep__incl.map  CXIQueue_8hpp__dep__incl.md5  CXIQueue_8hpp__incl.map  CXIQueue_8hpp__incl.md5  CXIQueue_8hpp_source.html  CudaQueue_8cpp.html  CudaQueue_8cpp__incl.map  CudaQueue_8cpp__incl.md5  CudaQueue_8hpp.html  CudaQueue_8hpp__dep__incl.map  CudaQueue_8hpp__dep__incl.md5  CudaQueue_8hpp__incl.map  CudaQueue_8hpp__incl.md5  CudaQueue_8hpp_source.html  HIPQueue_8cc.html  HIPQueue_8cc__incl.map  HIPQueue_8cc__incl.md5  HIPQueue_8hpp.html  HIPQueue_8hpp__dep__incl.map  HIPQueue_8hpp__dep__incl.md5  HIPQueue_8hpp__incl.map  HIPQueue_8hpp__incl.md5  HIPQueue_8hpp_source.html  HPEQueue_8cc.html  HPEQueue_8cc__incl.map  HPEQueue_8cc__incl.md5  HPEQueue_8hpp.html  HPEQueue_8hpp__dep__incl.map  HPEQueue_8hpp__dep__incl.md5  HPEQueue_8hpp__incl.map  HPEQueue_8hpp__incl.md5  HPEQueue_8hpp_source.html  MPIX__Barrier__init_8cc.html  MPIX__Barrier__init_8cc__incl.map  (+670 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  (+72 more)
docs/latex/: CXIQueue_8cpp.tex  CXIQueue_8cpp__incl.md5  CXIQueue_8cpp_a271ddf81140f43e0b57def42a30e9040_cgraph.md5  CXIQueue_8hpp.tex  CXIQueue_8hpp__dep__incl.md5  CXIQueue_8hpp__incl.md5  CXIQueue_8hpp_source.tex  CudaQueue_8cpp.tex  CudaQueue_8cpp__incl.md5  CudaQueue_8hpp.tex  CudaQueue_8hpp__dep__incl.md5  CudaQueue_8hpp__incl.md5  CudaQueue_8hpp_source.tex  HIPQueue_8cc.tex  HIPQueue_8cc__incl.md5  HIPQueue_8hpp.tex  HIPQueue_8hpp__dep__incl.md5  HIPQueue_8hpp__incl.md5  HIPQueue_8hpp_source.tex  HPEQueue_8cc.tex  HPEQueue_8cc__incl.md5  HPEQueue_8hpp.tex  HPEQueue_8hpp__dep__incl.md5  HPEQueue_8hpp__incl.md5  HPEQueue_8hpp_source.tex  MPIX__Barrier__init_8cc.tex  MPIX__Barrier__init_8cc__incl.md5  MPIX__Barrier__init_8cc_acc1fc16ea6bf21b6e22003d265e771c6_icgraph.md5  MPIX__Enqueue__start_8cc.tex  MPIX__Enqueue__start_8cc__incl.md5  MPIX__Enqueue__start_8cc_ae04cdace317bc39b2cbf329adc823438_icgraph.md5  MPIX__Enqueue__startall_8cc.tex  MPIX__Enqueue__startall_8cc__incl.md5  MPIX__Enqueue__startall_8cc_ab155573ff356983ecff37a264c7bf3cf_cgraph.md5  MPIX__Enqueue__startall_8cc_ab155573ff356983ecff37a264c7bf3cf_icgraph.md5  MPIX__Enqueue__waitall_8cc.tex  MPIX__Enqueue__waitall_8cc__incl.md5  MPIX__Imatch_8cc.tex  MPIX__Imatch_8cc__incl.md5  MPIX__Imatch_8cc_ae0364fdb68f1329b3d41f100daa93050_icgraph.md5  (+321 more)
include/: CMakeLists.txt  stream-triggering.h
scripts/: install.sh
scripts/frontier/install/: AllBuild.sh
scripts/tioga/: Tioga.md
scripts/tioga/install/: AllBuild.sh  CXIBuild.sh  HIPBuild.sh  ThreadBuild.sh
scripts/tuolumne/install/: AllBuild.sh
source/: CMakeLists.txt
source/bindings/: CMakeLists.txt  MPIX_Alloc_mem.cc  MPIX_Allreduce_init.cc  MPIX_Barrier_init.cc  MPIX_Enqueue_entry.cc  MPIX_Enqueue_prepare.cc  MPIX_Enqueue_start.cc  MPIX_Enqueue_startall.cc  MPIX_Enqueue_waitall.cc  MPIX_Free_gpu_mem.cc  MPIX_Free_mem.cc  MPIX_GPU_mem_alloc.cc  MPIX_Imatch.cc  MPIX_Is_matched.cc  MPIX_Match.cc  MPIX_Matchall.cc  MPIX_Prepare.cc  MPIX_Prepare_all.cc  MPIX_Queue_entry_free_all.cc  MPIX_Queue_free.cc  MPIX_Queue_host_wait.cc  MPIX_Queue_init.cc  MPIX_Queue_match.cc  MPIX_Queue_wait.cc  MPIX_Ready.cc  MPIX_Ready_all.cc  MPIX_Recv_init.cc  MPIX_Request_free.cc  MPIX_Request_freeall.cc  MPIX_Request_wait.cc  MPIX_Rsend_init.cc  MPIX_Send_init.cc  MPIX_Test.cc  MPIX_Wait.cc  MPIX_Waitall.cc  MPI_Overrides.cc  constants.cc  helpers.hpp
source/core/: CMakeLists.txt
source/core/include/abstract/: bundle.hpp  entry.hpp  match.hpp  progress.hpp  queue.hpp  request.hpp
source/core/include/misc/: mem_pool.hpp  print.hpp
source/core/include/queues/: CXIQueue.hpp  CudaQueue.hpp  HIPQueue.hpp  HPEQueue.hpp  ThreadQueue.h  ThreadQueue.hpp  libfab notes.txt
source/core/include/safety/: cuda.hpp  gpu.hpp  hip.hpp  libfabric.hpp  mpi.hpp
source/core/source/: CMakeLists.txt
source/core/source/abstract/: CMakeLists.txt  queue.cpp
source/core/source/queues/: CMakeLists.txt  CXIQueue.cc  CXIQueue.cpp  CXIQueue.hip  CudaQueue.cpp  CudaQueue.cu  HIPQueue.cc  HPEQueue.cc  ThreadQueue.cc
tests/: bandwidth_slurm.sh  compile.sh  cuda_queue.cpp  cuda_queue.cu  cxi_simple.cpp  full_thread.cpp  serial_thread.cpp  simple_thread.cpp  slurm_script.sh
tests/barrier/: cxi_barrier.cpp  cxi_barrier_only.cpp  threaded.cpp
tests/benchmark/: bandwidth_script.sh  bandwidth_slurm.sh  common.hpp  compile.sh  cxi_ring.cpp  f_bandwidth_script.sh  generate_csv.py  generate_csv.sh  iraw_pingpong.cpp  pingpong.cpp  pingpong_mpi.cpp  pingpong_mpi_db.cpp  pingpong_st.cpp  pingpong_st_db.cpp  raw_pingpong.cpp  run_script.sh  two_queue.cpp
tests/common/: common.hpp  timers.hpp
tests/hello_world/: cxi_simple.cpp  hip_rma.cpp  patrick-hip.cu  patrick.cu  rsend.cpp  serial_thread.cpp
tests/individual/thread/: barrier.cpp  full_thread.cpp
tests/multi-backend/: allreduce.cpp  barrier.cpp  compile.sh  f_slurm_script.sh  halo.cpp  halo_and_allreduce.cpp  hello_world.cpp  ring.cpp  rsend.cpp  run_script.sh  slurm_script.sh
